# contact_agenda_grpc

./: .gitignore  Dockerfile  README.md  contacts_pb2.py  contacts_pb2_grpc.py  pyproject.toml
app/: server.py  service_impl.py
client/: client.py
proto/: contacts.proto
