[tool.poetry]
name = "contact-agenda-grpc"
version = "0.1.0"
description = ""
authors = ["Alexandre Tavares <arduinitavares@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.2"
grpcio = "^1.73.0"
protobuf = "^6.31.1"
pylint = "^3.3.7"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.73.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
